--- a/docs/CHANGELOG
+++ b/docs/CHANGELOG
@@ -15,6 +15,8 @@ Current Devel
 	- Modules: Added operserv/stats
 	- Protocols: Handle remote servers trying to set an users accountname
 	- Protocols: Added ircd-ratbox support
+	- Modules: Add ChanServ/flags.
+	- Modules: InfoServ
 
 1.0.0-alpha3
 	- API: Added idflush() for flushing data about identified users to disk.
