--- a/docs/TODO
+++ b/docs/TODO
@@ -83,12 +83,14 @@
 	[X] Don't allow OperServ to be kicked/killed/etc. (Add the reconnection stuff in raw_ subs? --Matthew Barksbale)
 	[X] Restart
 	[X] Shutdown
-	[ ] Rehash (Config::Scoped doesn't allow this, we need our own config parser --Matthew)
+	[ ] Rehash (Config::Scoped doesn't allow this, we need our own config parser --Matthew Barksable)
 	[X] Module management (list, load, unload) [list done, somethings wrong with load and unload - perhaps module_exists is bugged --Matthew Barksbale] 
 	[ ] Make modload, modunload and protocols - unloadable ( protocols don't have a void/init handler, regardless, let it be known it's not unloadable --Matthew Barksbale)
  	[ ] Improve the error messages in modload, if the file doesn't exist say that.
 	[X] The protocols need to be a module (Add $Chakora::MODULE{name} $Chakora::MODULE{author} and $Chakora::MODULE{version} to the top of the protocol --Matthew Barksbale)
 	[ ] AKill
+	[ ] Net Ban
+	[?] Mass Mode
 	[ ] Jupe
 	[X] Global
 	[X] Uptime
@@ -152,7 +154,7 @@
 	[ ] When chanserv/flags is done, add the +L flag creation there
 	[ ] Make our own config parser, we really need one.
 	[!] Fix the truckload of uninitialized values issues that are displayed while in debug mode.
-        [!] Add Comments to all of the code  
+    [!] Add Comments to all of the code (Never done)  
 Key: 
 	X = Done
 	! = In development
