--- a/README
+++ b/README
@@ -1,9 +1,4 @@
-  ____ _           _                   
-/  __ \ |         | |                  
-| /  \/ |__   __ _| | _____  _ __ __ _ 
-| |   | '_ \ / _` | |/ / _ \| '__/ _` |
-| \__/\ | | | (_| |   < (_) | | | (_| |
- \____/_| |_|\__,_|_|\_\___/|_|  \__,_|
+FRANKLIN IRC SERVICES
  
                 README
 ---------------------------------------
