[docs/todo] Lets do a DEFCON.

--- a/docs/TODO
+++ b/docs/TODO
@@ -97,6 +97,7 @@
 	[X] Version
 	[ ] Logonnews (Add a hook using hook_uid_add, sending a( ) notice(s) to users on connect? --Matthew Barksbale)
 	[ ] Privs (Allows a soper to view the privs he/she has access to)
+	[!] DEFCON
 [ ] HostServ
 	[X] Make the hostserv core a module
 	[X] Set vHosts
