--- a/contrib/alyx/README
+++ b/contrib/alyx/README
@@ -7,7 +7,7 @@
 
 Note: These modules are not supported by Chakora.
         For assistance with the modules in this
-        folder, please ask in #helix on
+        folder, please ask in #dev on
         irc.woomoo.org. Thank you. :)
 
                             - alyx
