--- a/Home.textile
+++ b/Home.textile
@@ -1,1 +1,4 @@
-Welcome to the Chakora wiki!
+h2. Welcome to the Franklin IRC Services Wiki! .h2
+p. Please explore the wiki with the table below.
+
+|_.Header Name of Page | 
