--- a/Home.textile
+++ b/Home.textile
@@ -1,4 +1,5 @@
 h2. Welcome to the Franklin IRC Services Wiki! .h2
 p. Please explore the wiki with the table below.
 
-|_.Header Name of Page | 
+|_.Name of Page |
+| ChanServ |
